objects/supplier__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>BANGALORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHENNAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDERABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOLKATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUMBAI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>supplier_name__c</fullName>
        <description>it contains supplier information</description>
        <label>supplier name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>supplier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>supplier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>